# karaoke-prep

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION_SETUP.md  FINALIZATION-SETUP.md  LICENSE  MODAL-MIGRATION.md  README.md  app.py  core.py  environment.yml  finalise-functionality-map.md  karaoke-gen.spec  karaoke-prep.spec  prep-functionality-map.md  pyproject.toml  pytest.ini  test_direct.py  test_direct_suffixes.py  test_mediainfo_parser.py  test_mediainfo_parser_direct.py  test_modified_files.py  test_suffixes.py
.github/: removetriton.patch
.github/workflows/: publish.yml  test-and-publish.yml
The Fratellis - Whistle For The Choir/: The Fratellis - Whistle For The Choir (Lyrics).txt
cdgmaker/: composer.py  config.py  lrc_to_cdg.py
docs/: CNAME  README.md  app.js  styles.css
frontend/: README.md  app.js  index.html  karaoke-prep-styles-nomad.json  package-lock.json  package.json  styles.css  waterloo30sec.flac
karaoke_finalise/: karaoke_finalise.py
karaoke_gen/: __init__.py  __main__.py  audio_processor.py  controller.py  file_handler.py  karaoke_gen.py  lyrics_processor.py  metadata.py  video_generator.py
karaoke_gen/cli/: __init__.py  __main__.py  bulk_cli.py  commands.py  parser.py
karaoke_gen/core/: __init__.py  exceptions.py  project.py  track.py
karaoke_gen/karaoke_finalise/: __init__.py  karaoke_finalise.py
karaoke_gen/legacy/: __init__.py  karaoke_finalise.py  karaoke_prep.py
karaoke_gen/services/: __init__.py  main.py
karaoke_gen/services/audio/: __init__.py  converter.py  mixer.py  normalizer.py  separator.py  service.py
karaoke_gen/services/distribution/: __init__.py  cdg.py  notifier.py  organizer.py  service.py  txt.py  youtube.py
karaoke_gen/services/lyrics/: __init__.py  fetcher.py  formatter.py  service.py  synchronizer.py  transcriber.py
karaoke_gen/services/media/: __init__.py  detector.py  downloader.py  extractor.py  service.py
karaoke_gen/services/video/: __init__.py  compositor.py  renderer.py  screens.py  service.py  text.py
karaoke_gen/utils/: __init__.py  bulk_cli.py  gen_cli.py  logging.py  main.py  string.py
karaoke_prep/: __init__.py  __main__.py  audio_processor.py  config.py  controller.py  file_handler.py  finalise.py  karaoke_prep.py  lyrics_processor.py  requests_prep.py  video_generator.py
karaoke_prep/cli/: __init__.py  __main__.py  bulk_cli.py  commands.py  parser.py
karaoke_prep/core/: __init__.py  exceptions.py  project.py  track.py
karaoke_prep/karaoke_finalise/: __init__.py  cloud_manager.py  file_manager.py  format_generator.py  karaoke_finalise.py  lrc_to_cdg.py  media_processor.py  mediainfo_parser.py  notifier.py  user_interface.py  youtube_manager.py
karaoke_prep/legacy/: __init__.py  karaoke_finalise.py  karaoke_prep.py
karaoke_prep/services/: __init__.py  main.py
karaoke_prep/services/audio/: __init__.py  converter.py  mixer.py  normalizer.py  separator.py  service.py
karaoke_prep/services/distribution/: __init__.py  cdg.py  notifier.py  organizer.py  service.py  txt.py  youtube.py
karaoke_prep/services/lyrics/: __init__.py  fetcher.py  formatter.py  service.py  synchronizer.py  transcriber.py
karaoke_prep/services/media/: __init__.py  detector.py  downloader.py  extractor.py  service.py
karaoke_prep/services/video/: __init__.py  compositor.py  renderer.py  screens.py  service.py  text.py
karaoke_prep/utils/: __init__.py  auto_cli.py  bulk_cli.py  cli.py  config.py  date.py  file.py  finalise_cli.py  gen_cli.py  main.py  path.py  prep_cli.py  validation.py
platform/: download_ffmpeg.py
pre-refactor-old-code/: old_finalise.py  old_prep.py
tests/: __init__.py  test_cli_edit_lyrics.py  test_core.py  test_create_intro_end_screens.py  test_integration.py  test_utils.py
tests/data/: artist-titles.json  styles.json  waterloo10sec.flac
tests/integration/: test_cli_edit_lyrics.py  test_integration.py
tests/unit/: .gitignore  README.md  check_tests.py  conftest.py  requirements-test.txt  run_tests.py  test_async.py  test_audio.py  test_bulk_cli.py  test_file_operations.py  test_gen_cli.py  test_initialization.py  test_lyrics.py  test_metadata.py  test_video.py
tests/unit/test_karaoke_finalise/: test_ffmpeg_commands.py  test_file_input_validation.py  test_file_organisation.py  test_initialization.py  test_mediainfo.py  test_notifications_email.py  test_orchestration.py  test_output_video.py  test_user_prompts.py  test_youtube_integration.py  test_zip_creation.py
utils/: finalise_cli.py  prep_cli.py
