[tool.poetry]
name = "karaoke-prep"
version = "0.33.0"
description = "Prepare for karaoke video creation, by downloading audio and lyrics for a specified song or playlist from youtube and separating audio stems. After syncing, finalise the video with a title screen!"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "karaoke_prep" }]
homepage = "https://github.com/karaokenerds/karaoke-prep"
repository = "https://github.com/karaokenerds/karaoke-prep"
documentation = "https://github.com/karaokenerds/karaoke-prep/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.3,<2.5"
requests = ">=2"
beautifulsoup4 = ">=4"
yt-dlp = "*"
lyricsgenius = ">=3"
fetch-lyrics-from-genius = ">=0.1"
pillow = ">=10.1"
pyinstaller = ">=6.3"
google-api-python-client = "*"
google-auth = "*"
google-auth-oauthlib = "*"
google-auth-httplib2 = "*"
thefuzz = ">=0.22"
numpy = "^1"
audio-separator = { version = ">=0.21.0", extras = ["cpu"] }
lyrics-converter = ">=0.2.1"
lyrics-transcriber = ">=0.20.0"
kbputils = "^0.0.16"
attrs = ">=24.2.0"
cattrs = ">=24.1.2"
toml = ">=0.10"
argparse = ">=1.4.0"

[tool.poetry.group.dev.dependencies]
black = ">=23"
poetry = "*"

[tool.poetry.scripts]
karaoke-prep = 'karaoke_prep.utils.prep_cli:main'
karaoke-finalise = 'karaoke_prep.utils.finalise_cli:main'

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
